[package]
name = "tokio-memq"
version = "0.1.0"
edition = "2021"
description = "Simple, high-performance in-memory async message queue"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/tokio-memq"
keywords = ["async", "mq", "message-queue", "tokio", "in-memory"]
categories = ["asynchronous", "concurrency", "data-structures"]

[lib]
name = "tokio_memq"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1.0", default-features = false, features = ["sync", "rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
async-channel = "2.0"
anyhow = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
thiserror = "2.0"

# 日志相关依赖
log = "0.4"
env_logger = "0.11"

bincode = { version = "2.0.1", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.0", default-features = false, features = ["sync", "rt-multi-thread", "macros", "time"] }

[features]
default = []
