[package]
name = "tokio-memq"
version = "0.1.2"
edition = "2021"
description = "Simple, high-performance in-memory async message queue"
license = "Apache-2.0"
repository = "https://github.com/weiwangfds/tokio-memq"
readme = "README.md"
documentation = "https://docs.rs/tokio-memq"
keywords = ["async", "mq", "message-queue", "tokio", "in-memory"]
categories = ["asynchronous", "concurrency", "data-structures"]

[lib]
name = "tokio_memq"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1.0", default-features = false, features = ["sync", "rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
async-channel = "2.0"
anyhow = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
thiserror = "2.0"

# 日志相关依赖
log = "0.4"
env_logger = "0.11"

bincode = "1.3"
serde_json = "1.0"
rmp-serde = "1.1"
erased-serde = "0.4"
flate2 = "1.0"
zstd = "0.13"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.0", default-features = false, features = ["sync", "rt-multi-thread", "macros", "time"] }
rand = "0.9"

[features]
default = []

[[bench]]
name = "mq_benchmark"
harness = false
